--- a/Mystyle.css
+++ b/Mystyle.css
@@ -27,3 +27,25 @@ body {
 section {
   padding-top: 5rem;
 }
+
+#demo {
+  position: relative;
+  width: 800px;
+  height: 300px;
+  background-color: #000;
+  margin: auto;
+  overflow: hidden;
+}
+
+#demo h3 {
+  position: absolute;
+  font-family: "Asap", sans-serif;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+  width: 800px;
+  text-align: center;
+  visibility: hidden;
+  font-size: 120px;
+  top: 65px;
+}
